--- a/templates/bg/register.html
+++ b/templates/bg/register.html
@@ -47,8 +47,8 @@
         <h2>Тази част е опционална</h2>
         <li>
             <label for="">Пол</label>
-            <input type="radio" name="gender" id="radioMale"> Мъж
-            <input type="radio" name="gender" id="radioFemale"> Жена
+            <input type="radio" name="gender" value="Male"  id="radioMale"> Мъж
+            <input type="radio" name="gender" value="Female" id="radioFemale"> Жена
             <span>Напишете Вашия пол тук</span>
         </li>
         <li>
