--- a/templates/de/register.html
+++ b/templates/de/register.html
@@ -47,8 +47,8 @@
         <h2>Dieser Part ist optional</h2>
         <li>
             <label for="">Geschlecht</label>
-            <input type="radio" name="gender" id="radioMale"> Männlich
-            <input type="radio" name="gender" id="radioFemale"> Weiblich
+            <input type="radio" name="gender" value="Male" id="radioMale"> Männlich
+            <input type="radio" name="gender" value="Female" id="radioFemale"> Weiblich
             <span>Bitte geb Sie ihr Geschlecht ein.</span>
         </li>
         <li>
