--- a/templates/en/register.html
+++ b/templates/en/register.html
@@ -47,8 +47,8 @@
         <h2>This part is optional</h2>
         <li>
             <label for="">Gender</label>
-            <input type="radio" name="gender" id="radioMale"> Male
-            <input type="radio" name="gender" id="radioFemale"> Female
+            <input type="radio" name="gender" value="Male" id="radioMale"> Male
+            <input type="radio" name="gender" value="Female" id="radioFemale"> Female
             <span>Enter your gender here please</span>
         </li>
         <li>
