--- a/templates/fr/register.html
+++ b/templates/fr/register.html
@@ -47,8 +47,8 @@
         <h2>Cette partie est facultative</h2>
         <li>
             <label for="">Genre</label>
-            <input type="radio" name="gender" id="radioMale"> Mâle
-            <input type="radio" name="gender" id="radioFemale"> Femelle
+            <input type="radio" name="gender" value="Male"  id="radioMale"> Mâle
+            <input type="radio" name="gender" value="Female"id="radioFemale"> Femelle
             <span>Entrez votre sexe ici s'il vous plaît</span>
         </li>
         <li>
