--- a/templates/de/home.html
+++ b/templates/de/home.html
@@ -5,7 +5,7 @@
 <title>Wilkommen</title>
 {% endblock %}
 {% block body %}
-<h1>Willkomen</h1>
+<h1>Willkommen</h1>
 <hr>
 <h2> Bitte wählen Sie ein Dokument aus, bei dem Sie Hilfe benötigen: </h2>
 <ul>
