PDF generation Test

--- a/templates/bg/general_information/general_information3.html
+++ b/templates/bg/general_information/general_information3.html
@@ -18,6 +18,13 @@
                 </p>
             </details></span>
         </li>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <li>
                <input type="button" value="обратно" onClick="javascript:history.back()">
             <input type="submit" value="Изпращане">
