--- a/templates/de/general_information/general_information3.html
+++ b/templates/de/general_information/general_information3.html
@@ -19,6 +19,13 @@
                 </details>
             </span>
         </li>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <li>
             <input type="button" value="Zurück" onClick="javascript:history.back()">
             <input type="submit" value="Senden">
